Added Spinner and photos and names for items for sale

--- a/app/src/main/res/layout/fragment_add_edit.xml
+++ b/app/src/main/res/layout/fragment_add_edit.xml
@@ -40,7 +40,7 @@
                 android:inputType="textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
-<!--        לורן הוסיפה, כדי לבחור קטגוריה למוצר לסינון-->
+<!--  כדי לבחור קטגוריה למוצר לסינון-->
         <Spinner
             android:id="@+id/spinnerCategory"
             android:layout_width="match_parent"
