SEAN NEW UPDATE LOCATION

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,7 +33,7 @@
 
     <fragment
         android:id="@+id/detailFragment"
-        android:name="com.example.marketplaceapp.DetailFragment"
+        android:name="com.example.marketplaceapp.viewmodel.DetailFragment"
         android:label="Item Details"
         tools:layout="@layout/fragment_detail">
         <argument
