--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_cart"
+        android:title="@string/shopping_cart"
+        app:actionLayout="@layout/menu_item_cart"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/action_about"
         android:title="@string/about"
         android:icon="@android:drawable/ic_menu_info_details"
