--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,8 +4,8 @@
 
     <item
         android:id="@+id/action_cart"
+        android:icon="@drawable/ic_shopping_cart"
         android:title="@string/shopping_cart"
-        app:actionLayout="@layout/menu_item_cart"
         app:showAsAction="always" />
 
     <item
