--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/action_cart"
         android:icon="@drawable/ic_shopping_cart"
+        app:actionLayout="@layout/menu_item_cart"
         android:title="@string/shopping_cart"
         app:showAsAction="always" />
 
