--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -81,12 +81,30 @@
                 app:drawableStartCompat="@android:drawable/ic_dialog_map"
                 tools:text="2.5 km away" />
 
-            <Button
-                android:id="@+id/btnEdit"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="@string/edit" />
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnEdit"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="8dp"
+                    android:text="@string/edit" />
+
+                <Button
+                    android:id="@+id/btnDelete"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="8dp"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:text="@string/delete_confirm" />
+
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
