--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#D3D3D3</color>
-    <color name="colorAccent">#FF0000</color>
+    <color name="black">#FF000000</color>
+
+    <!-- Brand & Text Colors (Monochromatic) -->
+    <color name="brand_primary">#455A64</color> <!-- Sophisticated Dark Grey -->
+    <color name="brand_primary_variant">#263238</color> <!-- Darker Grey -->
+    <color name="primary_text">#212121</color>
+    
+    <!-- UI Background Colors -->
+    <color name="light_gray_background">#F8F8F8</color>
+    <color name="card_background">#FFFFFF</color>
 </resources>
